--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h3>Secuencia</h3>
       <ul id="sequence-list"></ul>
     </div>
+    <button id="verify-button">Verificar AFND</button>
   </div>
   <script src="script.js"></script>
 </body>
