--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <h3>Secuencia</h3>
       <ul id="sequence-list"></ul>
     </div>
-    <button id="verify-button">Verificar AFND</button>
+    <div id="buttons">
+      <button id="verify-button">Verificar AFND</button>
+      <button id="export-button">Exportar Grafo</button>
+      <button id="import-button">Importar Grafo</button>
+      <input id="import-input" type="file" accept=".json" style="display: none;">
+      
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
